<resources>
    <string name="app_name">Coquille</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="julieta">Julieta</string>
    <string name="confirmar">Confirmar</string>
    <string name="_00_00">00:00</string>
    <string name="lv_1">Lv. 1</string>
    <string name="todo">TODO</string>
    <string name="todo_1">TODO</string>
    <string name="todo_2">TODO</string>
    <string name="todo_3">TODO</string>
    <string name="todo_4">TODO</string>
    <string name="todo_5">TODO</string>
    <string name="todo_6">TODO</string>
    <string name="todo_7">TODO</string>
    <string name="todo_8">TODO</string>
    <string name="todo_9">TODO</string>
    <string name="secuencia_">Secuencia</string>
    <string name="sample_text_">Esta es una pequeña descripción sobre el juego de secuencia, el cual consiste en la selección de una figura geométrica para poder completar un patrón.</string>
    <string name="name_1">Nivel 1</string>
    <string name="name_2">Nivel 2</string>
    <string name="name_3">Nivel 3</string>
    <string name="name_4">Nivel 4 </string>
    <string name="name_5">Nivel 5</string>
    <string name="name_6">Nivel 6</string>
    <string name="todo_">TODO</string>

    <string name="ajustes">Ajustes</string>
    <string name="generalText">General</string>
    <string name="restingRecommendationsSettingTitle">Recomendaciones inteligentes de descansos</string>
    <string name="restingRecommendationsDescription">Te recomendararemos que te tomes un descanso de jugar cuando detectemos que quizá lo necesites</string>
    <string name="notificationsToPLayTextViewText">Notificaciones para jugar</string>


    <string name="tiulo">Título</string>
    <string name="cuentos_magicos">Cuentos mágicos</string>
    <string name="tortuguita">Tortuguita</string>
    <string name="memoria">Memorama</string>
    <string name="secuencia">Secuencia</string>
    <string name="racha_de_12_dias">Racha de 12 dias</string>
    <string name="todo9">todo9</string>
    <string name="todo8">todo8</string>
    <string name="todo7">todo7</string>
    <string name="todo6">todo6</string>
    <string name="todo5">todo5</string>
    <string name="todo4">todo4</string>
    <string name="todo3">todo3</string>
    <string name="todo2">todo2</string>
    <string name="todo1">todo1</string>
    <string name="limitar_tiempo_de_juego_titlle">Limitar tiempo de juego</string>
    <string name="you_won">You Won!</string>
    <string name="you_lost">You Lost!</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>

</resources>