<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.Sequence_stage1">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/figure1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo_9"
            android:src="@drawable/ic_square"
            tools:ignore="ImageContrastCheck">

        </ImageView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/figure2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo_8"
            android:src="@drawable/ic_triangle"
            tools:ignore="ImageContrastCheck">

        </ImageView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/figure4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo_1"
            android:src="@drawable/ic_uestionmark"
            tools:ignore="ImageContrastCheck">

        </ImageView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/figure3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_circle"
            tools:ignore="ImageContrastCheck">

        </ImageView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/gameWonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:rotation="-45"
        android:text="@string/you_won"
        android:textColor="#44BB44"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/gameLostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:rotation="-45"
        android:text="@string/you_lost"
        android:textColor="#BB4444"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_2"
        android:layout_width="281dp"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/option1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_square"
            android:contentDescription="@string/todo_5"
            android:translationX="10dp"
            android:translationY="15dp"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck">

        </ImageButton>

        <ImageButton
            android:id="@+id/option2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_triangle"
            android:contentDescription="@string/todo_4"
            android:translationX="110dp"
            android:translationY="15dp"
            tools:ignore="ImageContrastCheck">

        </ImageButton>

        <ImageButton
            android:id="@+id/option3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_circle"
            android:contentDescription="@string/todo_3"
            android:translationX="210dp"
            android:translationY="15dp"
            tools:ignore="ImageContrastCheck">

        </ImageButton>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_3"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="548dp"
        android:stateListAnimator="@null"
        android:translationX="0dp"
        android:translationY="0dp"
        app:cardBackgroundColor="?colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_view_4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maia2"
            android:hint="0"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="25sp"
            android:translationX="55dp"
            android:translationY="15dp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_4"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:stateListAnimator="@null"
        android:translationX="0dp"
        android:translationY="0dp"
        app:cardBackgroundColor="?colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maia2"
            android:hint="@string/_00_00"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="25sp"
            android:translationX="40dp"
            android:translationY="15dp">

        </TextView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>