<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title">

            <TextView
                android:id="@+id/ajustesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/biko_bold"
                android:gravity="center"
                android:text="@string/ajustes"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:textSize="48sp" />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/generalHeaderTextView"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/biko_regular"
                    android:text="@string/generalText"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/restingRecommendationsTextView"
                    android:layout_width="226dp"
                    android:layout_height="41dp"
                    android:layout_below="@id/generalHeaderTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/biko_regular"
                    android:text="@string/restingRecommendationsSettingTitle"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/restingRecommendationsDescriptionTextView"
                    android:layout_width="332dp"
                    android:layout_height="63dp"
                    android:layout_below="@+id/restingRecommendationsTextView"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/restingRecommendationsDescription"
                    android:textIsSelectable="false">


                </TextView>

                <ToggleButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignTop="@+id/restingRecommendationsTextView"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="-4dp"
                    android:layout_toEndOf="@+id/restingRecommendationsTextView"
                    android:background="@color/rojoMain"
                    app:elevation="0dp"
                    app:pressedTranslationZ="0dp"
                    app:useCompatPadding="true" />

                <TextView
                    android:id="@+id/notificationsToPlay"
                    android:layout_width="226dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/restingRecommendationsDescriptionTextView"
                    android:text="@string/notificationsToPLayTextViewText"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="20sp">

                </TextView>

                <ToggleButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignTop="@+id/notificationsToPlay"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="-4dp"
                    android:layout_toEndOf="@+id/notificationsToPlay"
                    android:background="@color/rojoMain"
                    app:elevation="0dp"
                    app:pressedTranslationZ="0dp"
                    app:useCompatPadding="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>




    </LinearLayout>

</ScrollView>

